<resources>
    <string name="app_name" translatable="false">AstraCrypt</string>
    <string name="email">Email</string>
    <string name="googlePlay" translatable="false">Google Play</string>
    <string name="home">Home</string>
    <string name="files">Files</string>
    <string name="starred">Starred</string>
    <string name="settings">Settings</string>
    <string name="video">Video</string>
    <string name="music">Music</string>
    <string name="photo">Photo</string>
    <string name="text">Text</string>
    <string name="application">Application</string>
    <string name="other">Other</string>
    <string name="document">Document</string>
    <string name="fromFile">From file</string>
    <string name="pathToDir">Path to dir</string>
    <string name="privacyPolicy">Privacy policy</string>
    <string name="user_name">User name</string>
    <string name="encryption_type">Encryption type</string>
    <string name="thumb_encryption_type">Thumbnail encryption type</string>
    <string name="length">Length</string>
    <string name="purchase">Purchase</string>
    <string name="purchased">Purchased</string>
    <string name="downgrade">Downgrade</string>
    <string name="upgrade">Upgrade</string>
    <string name="monthly">Monthly</string>
    <string name="quarterly">Quarterly</string>
    <string name="name">Name</string>
    <string name="signIn">Sign in</string>
    <string name="hint">Hint</string>
    <string name="t_noInternet">No internet</string>
    <string name="hello">Hello %1$s</string>
    <string name="welcome_1">Welcome back!</string>
    <string name="recentlyAdded">Recently added</string>
    <string name="open">Open</string>
    <string name="add">Add</string>
    <string name="scan">Scan</string>
    <string name="folder">Folder</string>
    <string name="folders">Folders</string>
    <string name="untitledFolder">Untitled folder</string>
    <string name="newFolder">New folder</string>
    <string name="createNew">Create new</string>
    <string name="files_menu_storages">Storages</string>
    <string name="files_options_addToStarred">Add to Starred</string>
    <string name="files_options_removeFromStarred">Remove from Starred</string>
    <string name="files_options_select">Select</string>
    <string name="files_options_rename">Rename</string>
    <string name="files_options_delete">Delete</string>
    <string name="files_options_export">Export</string>
    <string name="files_options_move">Move</string>
    <string name="files_options_details">Details</string>
    <string name="snack_folderCreated">Folder created</string>
    <string name="snack_folderDeleted">Folder deleted</string>
    <string name="snack_itemsDeleted">Items deleted</string>
    <string name="snack_itemsMoved">Items moved</string>
    <string name="snack_itemRenamed">Item renamed</string>
    <string name="snack_imported">Imported</string>
    <string name="snack_starred">Added to Starred</string>
    <string name="snack_unstarred">Removed from Starred</string>
    <string name="storageUsageLimit">Storage usage limit %1$s</string>
    <string name="increase">Increase</string>
    <string name="itemType">Item type</string>
    <string name="path">Path</string>
    <string name="user">User</string>
    <string name="error">Error</string>
    <string name="associatedData">Associated data</string>
    <string name="clear">Clear</string>
    <string name="copy">Copy</string>
    <string name="copied">Copied</string>
    <string name="paste">Paste</string>
    <string name="encrypt">Encrypt</string>
    <string name="decrypt">Decrypt</string>
    <string name="notes">Notes</string>
    <string name="note_title">Note title</string>
    <string name="lab">Lab</string>
    <string name="lab_aeadEncryption">AEAD Encryption</string>
    <string name="lab_combinedZip">Combined ZIP-Archive</string>
    <string name="lab_keySet">Key set</string>
    <string name="lab_keySetPassword">Key set password</string>
    <string name="lab_dataType">Data type</string>
    <string name="password">Password</string>
    <string name="gallery">Gallery</string>
    <string name="thumbnail">Thumbnail</string>
    <string name="withoutEncryption">Without encryption</string>
    <string name="withoutAuthentication">Without authentication</string>
    <string name="thumbnailPath">Thumbnail path</string>
    <string name="originalSize">Original size</string>
    <string name="currentSize">Current size</string>
    <string name="thumbnailSize">Thumbnail size</string>
    <string name="creationTime">Creation time</string>
    <string name="modificationTime">Modification time</string>
    <string name="imageResolution">Image resolution</string>
    <string name="videoResolution">Video resolution</string>
    <string name="sample_rate">Sample rate</string>
    <string name="folderContents">Folder contents</string>
    <string name="toolbar_selected">%1$d selected</string>
    <string name="toolbar_selectDestination">Select destination</string>
    <string name="notification_import_title">Importing…</string>
    <string name="notification_dbTransform_title">Transformation of the database…</string>
    <string name="notification_channel_fileOperations">File operations</string>
    <string name="notification_channel_fileOperations_desc">Notifications on operations of adding and moving files</string>
    <string name="settings_editProfile">Edit profile</string>
    <string name="settings_security">Security</string>
    <string name="settings_interface">Interface</string>
    <string name="settings_enableDynamicColors">Enable Dynamic Colors</string>
    <string name="viewMode">View mode</string>
    <string name="viewMode_list">List</string>
    <string name="viewMode_grid">Grid</string>
    <string name="settings_quickActions">Quick Actions</string>
    <string name="settings_quickActions_dataDeletion">Quick data deletion</string>
    <string name="settings_deviceAdminRights">Device administrator rights</string>
    <string name="settings_deviceAdminRights_warning">You will not be able to uninstall this app while this feature is enabled</string>
    <string name="settings_deviceAdminRights_summary">Provides device management functions at the system level</string>
    <string name="settings_deviceAdminRights_device_summary">Allow the application to use some system functions to increase the level of data protection (protection against accidental deletion of the application or data, etc.).</string>
    <string name="settings_changeName">Change Name</string>
    <string name="settings_changeAvatar">Change avatar</string>
    <string name="settings_encryption">Encryption</string>
    <string name="settings_authentication">Authentication</string>
    <string name="settings_authenticationMethod">Authentication method</string>
    <string name="settings_database">Database</string>
    <string name="settings_columns">Columns</string>
    <string name="settings_columns_summary">Encrypted columns</string>
    <string name="settings_about">About the app</string>
    <string name="purchases">Purchases</string>
    <string name="settings_dataCollection">Data collection</string>
    <string name="settings_collectAnalytics">Allow to collect analytics</string>
    <string name="settings_collectCrashlytics">Allow to collect info about errors</string>
    <string name="settings_showHint">Show hint</string>
    <string name="settings_bindWithFiles">Bind with file encryption</string>
    <string name="settings_camouflage">Camouflage</string>
    <string name="settings_camouflageType">Camouflage type</string>
    <string name="settings_camouflageType_no">No camouflage</string>
    <string name="settings_camouflageType_calculator">Calculator</string>
    <string name="settings_camouflage_numberCombination">Number combination</string>
    <string name="support">Support</string>
    <string name="about_moreApps">More apps</string>
    <string name="about_moreApps_summary">Other apps of this developer</string>
    <string name="about_leaveFeedback">Leave feedback</string>
    <string name="version">Version %s</string>
    <string name="plan_starter">Starter</string>
    <string name="plan_premium">Premium</string>
    <string name="none">None</string>
    <string name="help">Help</string>
    <string name="save">Save</string>
    <string name="load">Load</string>
    <string name="source">Source</string>
    <string name="destination">Destination</string>
    <string name="rateAppManager_title">Rate this app</string>
    <string name="rateAppManager_message">If you enjoy using this app, would you mind taking a moment to rate it? It won\'t take more than one minute. Thank you for your support!</string>
    <string name="remindMeLater">Remind me later</string>
    <string name="learnMore">Learn more</string>
    <string name="dialog_updateProgram">Update the program</string>
    <string name="dialog_updateProgram_msg">The current version of the application has critical bugs and vulnerabilities. Update the application to the latest version.</string>
    <string name="dialog_deleteOriginalFiles">Delete original files?</string>
    <string name="dialog_deleteOriginalFiles_msg">Are you sure you want to permanently delete the original files after encryption?</string>
    <string name="dialog_storageLimitExceeded">Storage limit exceeded</string>
    <string name="dialog_storageLimitExceeded_msg">You must free up storage space or upgrade to Premium to be able to add new files.</string>
    <string name="dialog_upgradeYourPlan">Upgrade your plan</string>
    <string name="dialog_upgradeYourPlan_msg">To unlock this and many other features, upgrade to at least a %1$s plan.</string>
    <string name="dialog_encryptName">Encrypt name?</string>
    <string name="dialog_encryptName_msg">Encrypting the name will disable searching and sorting by name.</string>
    <string name="dialog_applyNewSettings">Apply new settings?</string>
    <string name="dialog_applyNewSettings_message">Applying the new settings may take some time.\nNote: The operation cannot be undone.</string>
    <string name="dialog_dbUpdate">Database update</string>
    <string name="dialog_exporting">Exporting</string>
    <string name="drinkWhileApplyingSettings">Grab yourself a cup of coffee while we apply your settings</string>
    <string name="t_invalidPass">Invalid password</string>
    <string name="noItemsTitle">There are no items here!</string>
    <string name="noItemsTitleSearch">There are no search results!</string>
    <string name="noItemsSummary">Start adding your items by clicking on button</string>
    <string name="noItemsSummarySearch">Try using a different search query by clicking on button</string>
    <string name="purchasePremiumForever">Now you can purchase premium forever</string>
    <string name="verifying">Verifying</string>
    <string name="verifying_msg">Verifying your purchase. Please wait.</string>
    <string name="purchaseConditions">This is a one-time purchase. Once purchased, you will have access to all of the app\'s features without ads.</string>
    <string name="privilege_previousPlanFeatures">Previous plan features</string>
    <string name="privilege_basicFeatures">Basic free features</string>
    <string name="privilege_noAds">No ads</string>
    <string name="privilege_unlimitedStorage">Unlimited storage</string>
    <string name="privilege_files">%1$d files</string>
    <string name="privilege_filesEncryptionInLab">File encryption in the Lab</string>
    <string name="privilege_thumbEncryption">Ability to encrypt file thumbnails</string>
    <string name="privilege_dbEncryption">Ability to encrypt the database of files</string>
    <string name="privilege_authBindEncryption">Ability to bind authentication to encrypted files</string>
    <string name="privilege_customCamouflages">Ability to set a custom camouflage for the application</string>
</resources>