<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <com.google.android.material.bottomsheet.BottomSheetDragHandleView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

        <TextView
            android:id="@+id/title"
            style="@style/Base.TextView.Options.Title"
            android:ellipsize="end"
            android:maxLines="2" />

        <com.google.android.material.divider.MaterialDivider
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp" />

        <TextView
            android:id="@+id/open"
            style="@style/Base.TextView.Options.Item"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/open"
            app:drawableStartCompat="@drawable/ic_open" />

        <TextView
            android:id="@+id/export"
            style="@style/Base.TextView.Options.Item"
            android:text="@string/files_options_export"
            app:drawableStartCompat="@drawable/ic_export" />

        <TextView
            android:id="@+id/addToStarred"
            style="@style/Base.TextView.Options.Item"
            android:text="@string/files_options_addToStarred"
            android:visibility="gone"
            app:drawableStartCompat="@drawable/ic_menu_favourite_outline"
            tools:visibility="visible" />

        <TextView
            android:id="@+id/removeFromStarred"
            style="@style/Base.TextView.Options.Item"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/files_options_removeFromStarred"
            android:visibility="gone"
            app:drawableStartCompat="@drawable/ic_menu_favourite"
            tools:visibility="visible" />

        <TextView
            android:id="@+id/select"
            style="@style/Base.TextView.Options.Item"
            android:text="@string/files_options_select"
            app:drawableStartCompat="@drawable/ic_select" />

        <TextView
            android:id="@+id/rename"
            style="@style/Base.TextView.Options.Item"
            android:text="@string/files_options_rename"
            app:drawableStartCompat="@drawable/ic_rename_outline" />

        <TextView
            android:id="@+id/delete"
            style="@style/Base.TextView.Options.Item"
            android:text="@string/files_options_delete"
            app:drawableStartCompat="@drawable/ic_delete_variant_outline" />

        <TextView
            android:id="@+id/details"
            style="@style/Base.TextView.Options.Item"
            android:text="@string/files_options_details"
            app:drawableStartCompat="@drawable/ic_details_outline" />
    </LinearLayout>
</ScrollView>